# strata

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup_conda.sh  setup_docker.sh
configs/example/: llama3.1-8b.yaml  llama3.1-8b_json.yaml  templates.yaml  templates_json.yaml
example_data/: generator.ipynb  random_medical_data.csv  random_medical_data.json  test_0.8_0.1_0.1_0.csv  test_0.8_0.1_0.1_0.json  train_0.8_0.1_0.1_0.csv  train_0.8_0.1_0.1_0.json  val_0.8_0.1_0.1_0.csv  val_0.8_0.1_0.1_0.json
parse_functions/example/: cancer.py  default.py  source.py
scripts/: run_split.sh  split_data.py
src/strata/: inference.py  llm.py  main.py  preprocess.py  template.py  train.py
src/strata/utils/: data_mixin.py  logging.py  metrics.py  parsing.py  unsloth_patch.py
